# ontario511-road-data-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
DBT/: Dockerfile  dbt_project.yml  profiles.yml
DBT/models/marts/: fct_active_alerts.sql  fct_kpi_statistics.sql  fct_road_disruption_index.sql  rpt_condition_by_region.sql  rpt_top_camera_roadway.sql  rpt_top_construction_roadway.sql  rpt_top_organization.sql  schema.yml
DBT/models/staging/: schema.yml  sources.yml  stg_alerts.sql  stg_cameras.sql  stg_constructions.sql  stg_evenements.sql  stg_roadconditions.sql  stg_seasonalloads.sql
airflow/: Dockerfile
airflow/dags/: ontario511_daily_summary.py  ontario511_pipeline.py
dashboard/: Dockerfile  alertstab.py  chatbot_agent.py  chatbottab.py  config.py  db.py  exploretab.py  generate_embeddings.py  main.py  overviewtab.py  pyproject.toml  test_agent.py  theme.py
ingestion/: Dockerfile  config.py  main.py  pyproject.toml
ingestion/fetchers/: ontario511_fetcher.py  ontario511_fetcher.py    transforms.py
postgres/init/: 01_init_schemas.sql
