[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "gradio>=6.20.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]
