[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "gradio>=6.20.0",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.4.8",
    "langchain-classic>=1.0.8",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-postgres>=0.0.17",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]
